--- a/webcommon/build.gradle
+++ b/webcommon/build.gradle
@@ -1,9 +1,5 @@
-group 'com.zhouw'
-version '1.0-SNAPSHOT'
 
 apply plugin: 'java'
-apply plugin: 'eclipse'
-apply plugin: 'idea'
 
 sourceCompatibility = 1.8
 
@@ -11,10 +7,8 @@ repositories {
     mavenCentral()
 }
 
-
-
 dependencies {
-
+    testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
 
