--- a/build.gradle
+++ b/build.gradle
@@ -56,10 +56,21 @@ project(':springcloud-demo-common'){
     }
 }
 
+project(':server'){
+    dependencies {
+        compile group: 'com.jcraft', name: 'jsch', version: '0.1.54'
+        compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.3'
+        // https://mvnrepository.com/artifact/io.netty/netty-all
+        compile group: 'io.netty', name: 'netty-all', version: '4.1.16.Final'
+
+    }
+}
+
 project(':webcommon'){
     dependencies {
         testCompile group: 'junit', name: 'junit', version: "${junitVersion}"
         testCompile group: 'org.springframework.boot', name: "spring-boot-starter-test", version: "${springBootVersion}"
+
         compile group: 'com.jcraft', name: 'jsch', version: '0.1.54'
         compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.3'
         compile group: 'org.springframework.cloud', name: "spring-cloud-starter-config", version: "${springCloudVersion}"
